<resources>
    <string name="app_name">ClickThePic</string>
    <string name="start">Start</string>
    <string name="refreshDebug">New Game?</string>
    <string name="defaultScore">Score: 0</string>
    <string name="defaultTimer">Time Left: 0</string>
    <string name="gameOver">Game Over!</string>
    <string name="score">Score:</string>
    <string name="timer">Time Left:</string>
    <string name="button">button</string>
    <string name="footnote">by austinwhite.tech, 2020</string>
</resources>