<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:clipChildren="false"
    android:clipToPadding="false">

    <Button
        android:id="@+id/refreshDebug"
        android:layout_width="116dp"
        android:layout_height="56dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="202dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/refreshDebug"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/gameObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/button"
        android:src="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/gameObject2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/button"
        app:srcCompat="@android:drawable/presence_online" />

    <ImageButton
        android:id="@+id/gameObject3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/button"
        app:srcCompat="@android:drawable/presence_online" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/defaultScore"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="595dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/defaultTimer"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/gameOver"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/refreshDebug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>