<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startButton"
        style="@android:style/Widget.Material.Button"
        android:layout_width="124dp"
        android:layout_height="63dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="417dp"
        android:background="#000000"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/start"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="560dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/chathura"
        android:text="@string/footnote"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />
</androidx.constraintlayout.widget.ConstraintLayout>